--- a/ex29/imagens/fundo004.html
+++ b/ex29/imagens/fundo004.html
@@ -5,6 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Posicionamento</title>
 </head>
+<style>
+    body{background-image: url(https://gustavoguanabara.github.io/html-css/imagens/mascote.png);
+    background-size: 100px;
+    background-repeat: no-repeat;
+    background-position: center center;
+    height: 98vh;}
+</style>
 <body>
     
 </body>
