--- a/ex29/imagens/fundo006.html
+++ b/ex29/imagens/fundo006.html
@@ -4,6 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+body{background-color: black;
+    height: 100vh;
+background-image: url(wallpaper002.jpg);
+background-position: center top;
+background-repeat: no-repeat;
+background-size: auto;}
+main{background-color: white;
+width: 400px;
+padding: 10px;
+margin: auto;
+border: 1px solid darkblue;
+border-radius: 15px;
+}
+    </style>
 </head>
 <body>
     <main>
