--- a/ex29/imagens/fundo006.html
+++ b/ex29/imagens/fundo006.html
@@ -5,14 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-body{background-color: black;
+body{/*background-color: black;
     height: 100vh;
 background-image: url(wallpaper002.jpg);
 background-position: center top;
 background-repeat: no-repeat;
-background-size: auto;}
+background-size: cover;
+background-attachment: fixed;/*
+
+background: url(wallpaper002.jpg)center center no-repeat cover 
+fixed background-size:cover;  
+
+/*shorthand background color>
+>image>position>repeat>[size]>attachment*/
+background: url(wallpaper002.jpg)center center no-repeat cover ; background-size: cover;
 main{background-color: white;
-width: 400px;
+max-width: 400px;
 padding: 10px;
 margin: auto;
 border: 1px solid darkblue;
@@ -25,7 +33,7 @@ border-radius: 15px;
         <h1>
             teste de imagem de fundo
         </h1>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Placeat ducimus blanditiis modi laborum ipsum aspernatur architecto aut aperiam, incidunt explicabo nostrum eveniet sit perferendis commodi porro voluptatem quo reiciendis reprehenderit. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit asperiores laudantium, autem veritatis consequatur labore tempora ea, nam ab placeat eligendi. Ex, placeat! Ex iure reiciendis cum excepturi adipisci nisi! Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque quos eaque voluptate ipsa. Reiciendis quia repellendus eos unde ea, molestiae sint consectetur nulla, autem suscipit est, consequatur quidem debitis quos!</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Placeat ducimus blanditiis modi laborum ipsum aspernatur architecto aut aperiam, incidunt explicabo nostrum eveniet sit perferendis commodi porro voluptatem quo reiciendis reprehenderit. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit asperiores laudantium, autem veritatis consequatur labore tempora ea, nam ab placeat eligendi. Ex, placeat! Ex iure reiciendis cum excepturi adipisci nisi! Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque quos eaque voluptate ipsa. Reiciendis quia repellendus eos unde ea, molestiae sint consectetur nulla, autem suscipit est, consequatur quidem debitis quos!Lorem ipsum dolor, sit amet consectetur adipisicing elit. Placeat ducimus blanditiis modi laborum ipsum aspernatur architecto aut aperiam, incidunt explicabo nostrum eveniet sit perferendis commodi porro voluptatem quo reiciendis reprehenderit. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit asperiores laudantium, autem veritatis consequatur labore tempora ea, nam ab placeat eligendi. Ex, placeat! Ex iure reiciendis cum excepturi adipisci nisi! Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque quos eaque voluptate ipsa. Reiciendis quia repellendus eos unde ea, molestiae sint consectetur nulla, autem suscipit est, consequatur quidem debitis quos!Lorem ipsum dolor, sit amet consectetur adipisicing elit. Placeat ducimus blanditiis modi laborum ipsum aspernatur architecto aut aperiam, incidunt explicabo nostrum eveniet sit perferendis commodi porro voluptatem quo reiciendis reprehenderit. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit asperiores laudantium, autem veritatis consequatur labore tempora ea, nam ab placeat eligendi. Ex, placeat! Ex iure reiciendis cum excepturi adipisci nisi! Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque quos eaque voluptate ipsa. Reiciendis quia repellendus eos unde ea, molestiae sint consectetur nulla, autem suscipit est, consequatur quidem debitis quos!Lorem ipsum dolor, sit amet consectetur adipisicing elit. Placeat ducimus blanditiis modi laborum ipsum aspernatur architecto aut aperiam, incidunt explicabo nostrum eveniet sit perferendis commodi porro voluptatem quo reiciendis reprehenderit. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit asperiores laudantium, autem veritatis consequatur labore tempora ea, nam ab placeat eligendi. Ex, placeat! Ex iure reiciendis cum excepturi adipisci nisi! Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque quos eaque voluptate ipsa. Reiciendis quia repellendus eos unde ea, molestiae sint consectetur nulla, autem suscipit est, consequatur quidem debitis quos!Lorem ipsum dolor, sit amet consectetur adipisicing elit. Placeat ducimus blanditiis modi laborum ipsum aspernatur architecto aut aperiam, incidunt explicabo nostrum eveniet sit perferendis commodi porro voluptatem quo reiciendis reprehenderit. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit asperiores laudantium, autem veritatis consequatur labore tempora ea, nam ab placeat eligendi. Ex, placeat! Ex iure reiciendis cum excepturi adipisci nisi! Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque quos eaque voluptate ipsa. Reiciendis quia repellendus eos unde ea, molestiae sint consectetur nulla, autem suscipit est, consequatur quidem debitis quos!</p>
     </main>
 </body>
 </html>
