--- a/ex29/imagens/fundo007.html
+++ b/ex29/imagens/fundo007.html
@@ -6,6 +6,7 @@
     <title>alinhamente vertical</title>
     <style>
         #container {
+            position: relative;
             height: 500px; background-color: purple;
             padding: 10px;
         }
