--- a/ex29/imagens/fundo007.html
+++ b/ex29/imagens/fundo007.html
@@ -3,18 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>alinhamente vertical</title>
+    <title>alinhamento vertical</title>
     <style>
-        #container {
+        #container {background-image: url(target001.png)
+        ;background-size: 100% 100%;
             position: relative;
-            height: 500px; background-color: purple;
+            height: 96vh; background-color: purple;
             padding: 10px;
         }
 
-        #conteudo{height: 200px;
+        #conteudo{
+            background-image: url(target001.png)
+        ;background-size: 100% 100%;height: 200px;
             position: absolute;
             width: 400px;
-        background-color: yellow;} 
+        background-color: yellow;
+    left: 50%;
+top: 50%;
+transform: translate(-50%,-50%);}
     </style>
 </head>
 <body>
